# openclaw-frontier-stack

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  README.md  STATUS.md  bundles.json  package-lock.json  package.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.githooks/: pre-push
.github/workflows/: autonomous-loops.yml  dependency-vulnerability-scan.yml  documentation-staleness.yml  grade.yml  performance-baseline-drift.yml  prompt-tuning.yml  release.yml  scheduled-evals.yml  supply-chain-advisory.yml  ticket-sla-escalation.yml  verify-package.yml
.opencode/: plugin.json
agents/: README.md
agents/architect/: CONTRACT.md
agents/builder/: CONTRACT.md
agents/dependency-warden/: CONTRACT.md
agents/eval-runner/: CONTRACT.md
agents/executive-summary/: CONTRACT.md
agents/marketing-strategist/: CONTRACT.md
agents/orchestrator/: CONTRACT.md
agents/researcher/: CONTRACT.md
agents/reviewer/: CONTRACT.md
agents/scribe/: CONTRACT.md
crates/: Cargo.toml  README.md
crates/openclaw-blackboard/: Cargo.toml
crates/openclaw-blackboard/src/: lib.rs
crates/openclaw-blackboard/tests/: append_read.rs  claim_collision.rs  snapshot_reducer.rs
crates/openclaw-envelope/: Cargo.toml
crates/openclaw-envelope-node/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json
crates/openclaw-envelope-node/npm/darwin-arm64/: package.json
crates/openclaw-envelope-node/npm/linux-x64/: package.json
crates/openclaw-envelope-node/npm/win32-x64/: package.json
crates/openclaw-envelope-node/src/: lib.rs
crates/openclaw-envelope/src/: lib.rs
crates/openclaw-envelope/tests/: canonical.rs  nested_signature_tamper.rs  sign_verify.rs
crates/openclaw-envelope/tests/fixtures/: canonical-corpus.json
crates/openclaw-taskflow/: Cargo.toml
crates/openclaw-taskflow/src/: lib.rs
crates/openclaw-taskflow/tests/: fsm_happy_path.rs  fsm_invalid_transitions.rs
cron/: jobs.json
docs/: WIKI_INDEX.md  agent-daemon.md  agent-roster-manifest.md  agent-system.md  architecture-diagrams.md  artifact-catalog.md  bundles.md  bus-and-blackboard-protocol.md  bus-connectivity-diagnostics.md  communication-planes.md  cron-scheduler.md  delegation-router-policy.md  demo-flow.md  doctor.md  end-to-end-trace.md  fleet-orchestration.md  fresh-clone-verification.md  github-repository-hygiene.md  goal-system.md  grading.md  graph-system.md  hermes-agent-audit.md  integration-multi-agent-hosts.md  integration-yoru-rei-neo.md  maintainer-handoff.md  memory-rag-cag-compaction.md  mission-control-control-plane.md  orchestration.md  package-edit-claims.md  production-release-gates.md  public-release-boundaries.md  reference-runtime-audit.md  release-scope.md  remote-approval-state-parity.md  repository-initialization-checklist.md  runtime-ops.md  security-governance.md  sentinel-release-gate.md  skill-eval-telemetry.md  skill-forge.md  (+6 more)
hooks/: EXAMPLES.md  git-push-gate.js  hooks.json  private-content-scan.js
lib/: cost-table.json
release-gate/: checklist.md  hook-allowlist.json  reviewer-decision-schema.md  reviewer-decision.template.yaml  supply-chain-allowlist.json
scripts/: eval-blackboard-contention.js  eval-frontier-orchestration-scale.js  eval-security-governance.js  grade.js  orchestrate.js  package-release.js  release-preflight.js  render-release-notes.js  run-skill-evals.js  test-render-release-notes.js  validate-skills.sh  verify-git-history-clean.js  verify-package.js  write-github-ship-packet.js
webhook/: subscriptions.json
(+404 files in other folders)
