[workspace]
resolver = "2"
members = [
    "openclaw-envelope",
    "openclaw-blackboard",
    "openclaw-taskflow",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/openclaw/frontier-stack"
authors = ["OpenClaw Frontier Stack contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["pem", "pkcs8"] }
base64 = "0.22"
tempfile = "3.10"
getrandom = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
